--- a/package.json
+++ b/package.json
@@ -15,24 +15,28 @@
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm run clean-dist && npm run build:html && npm run lint && npm run test",
+    "prebuild": "npm run clean-dist && npm run build:html",
     "build": "babel-node tools/build.js && npm run open:dist",
     "test": "mocha tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
     "test:cover": "babel-node node_modules/isparta/bin/isparta cover --root src --report html node_modules/mocha/bin/_mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
     "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "Cory House",
+  "author": "Squelo Ltd",
   "license": "MIT",
   "dependencies": {
+    "axios": "0.12.0",
+    "chart.js": "1.1.1",
     "material-ui": "0.15.0",
     "object-assign": "4.1.0",
     "react": "15.0.2",
+    "react-chartjs-2": "1.1.4",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-tap-event-plugin": "1.0.0",
-    "redux": "3.5.2"
+    "redux": "3.5.2",
+    "uid": "0.0.2"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
